<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".ui.main.MainActivity">

  <FrameLayout
    android:id="@+id/filter_bar_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/toolbar"
    android:background="?attr/colorPrimary"
    android:paddingBottom="12dp"
    android:paddingLeft="12dp"
    android:paddingRight="12dp">

    <androidx.cardview.widget.CardView
      android:id="@+id/filter_bar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:clickable="true"
      android:elevation="8dp"
      android:focusable="true"
      android:foreground="?attr/selectableItemBackground">

      <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <ImageView
          android:id="@+id/button_filter"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerVertical="true"
          android:padding="8dp"
          app:srcCompat="@drawable/ic_filter_list_white_24px"
          app:tint="@color/greySecondary" />

        <ImageView
          android:id="@+id/button_clear_filter"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentEnd="true"
          android:layout_centerVertical="true"
          android:padding="8dp"
          app:srcCompat="@drawable/ic_close_white_24px"
          app:tint="@color/greySecondary" />

        <LinearLayout
          android:id="@+id/text_current_search_container"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerVertical="true"
          android:layout_marginStart="8dp"
          android:layout_toEndOf="@+id/button_filter"
          android:orientation="vertical"
          android:paddingBottom="8dp"
          android:paddingTop="8dp">

          <TextView
            android:id="@+id/text_current_search"
            style="@style/AppTheme.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_books"
            android:textColor="@color/greySecondary"
            tools:text="Filter" />

          <TextView
            android:id="@+id/text_current_sort_by"
            style="@style/AppTheme.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sorted_by_rating"
            android:textColor="@color/greyDisabled" />
        </LinearLayout>
      </RelativeLayout>
    </androidx.cardview.widget.CardView>
  </FrameLayout>

  <LinearLayout
    android:id="@+id/empty_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_below="@+id/toolbar"
    android:layout_centerHorizontal="true"
    android:gravity="center"
    android:orientation="vertical"
    android:visibility="visible"
    tools:visibility="gone">

    <ImageView
      style="@style/AppTheme.BookKid"
      android:src="@drawable/book_kid" />

    <TextView
      style="@style/AppTheme.Body1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:text="@string/no_book_results"
      android:textColor="@color/greyDisabled" />
  </LinearLayout>

  <ProgressBar
    android:id="@+id/progress_loading"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBottom="@+id/books_recycler"
    android:layout_alignTop="@+id/books_recycler"
    android:layout_centerHorizontal="true"
    android:visibility="gone" />

  <androidx.appcompat.widget.Toolbar
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorPrimary"
    android:theme="@style/AppTheme"
    app:logo="@drawable/ic_outline_auto_stories_24"
    app:popupTheme="@style/Theme.AppCompat.Light.DarkActionBar"
    app:title="@string/app_name"
    app:titleMarginStart="24dp"
    app:titleTextColor="@android:color/white" />

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/books_recycler"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/filter_bar_container"
    android:background="@android:color/white"
    tools:listitem="@layout/item_book" />

  <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
    android:id="@+id/add_books_fab"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_alignParentEnd="true"
    android:layout_marginBottom="5dp"
    android:layout_marginEnd="5dp"
    android:text="@string/add_books"
    android:textColor="@android:color/white"
    app:backgroundTint="@color/colorPrimary"
    app:icon="@drawable/outline_book_add_24"
    app:iconSize="32dp"
    app:iconTint="@android:color/white"
    app:rippleColor="@android:color/darker_gray"
    app:strokeColor="@android:color/white"
    app:strokeWidth="1dp" />
</RelativeLayout>